docs: attribution checked against the JVM's own source, not from memory
Third revision of who each patch serves, and the first done by reading
HotSpot rather than recalling it. It moves three claims:

The first patch is not about madvise. HotSpot uncommits by mapping
PROT_NONE over the range with MAP_FIXED, on every collector; its only
madvise(MADV_DONTNEED) is in MutableNUMASpace, inert here. The patch still
holds, because on nanos that MAP_FIXED goes through the same vmap_lock into
the same unmap -- but a reviewer who checks the call we named would have
found we had not.

The seventh does not serve ZGC at all: the file that backs its heap
contains neither fsync nor msync. It goes last, and says so.

The fourth has two halves on different paths, and on aarch64 one of them is
dead code -- pte_is_dirty is a stub returning false there.