@@ -72,10 +72,19 @@ Four processors caught with the gdb stub on a stock build: two spinning on
 it inside `page_invalidate_sync`, one in `fsync` waiting for every processor to
 join. A waiter that spins with interrupts off never services the flush IPI.
 
-**Who walks this path:** `madvise` and `munmap`, on any mapping. Not ZGC, whose
-heap is a memfd it punches rather than advises -- but every collector with an
-anonymous heap returns memory exactly this way, and so does any program that
-does.
+**Who walks this path:** every `mmap`, `munmap`, `mprotect`, `mremap`, `madvise`,
+`msync` and every page fault -- `vmap_lock` is taken by all of them
+(`unix_internal.h:833`).
+
+A JVM reaches it on **every** collector, and not through `madvise`: HotSpot
+uncommits by mapping `PROT_NONE` over the range with `MAP_FIXED|MAP_ANONYMOUS`
+(`os::pd_uncommit_memory`, `os_linux.cpp:3455`) -- G1
+(`g1PageBasedVirtualSpace.cpp:203`), Shenandoah (`shenandoahHeap.cpp:1803`),
+Parallel and Serial (`virtualspace.cpp:373`), ZGC
+(`zPhysicalMemoryBacking_linux.cpp:705`). On nanos that `MAP_FIXED` goes through
+`process_remove_range_locked` (`mmap.c:1396`) under this same lock and into the
+same `unmap_and_free_phys`. HotSpot's only `madvise(MADV_DONTNEED)` is in
+`MutableNUMASpace` (`mutableNUMASpace.cpp:215`), which is inert here.
 
 ## 2 — page table lock
 
@@ -84,7 +93,8 @@ does.
 The same shape on `pt_lock`, which the fault takes to map a page and the unmap
 takes to remove one. Not argued from symmetry: 28 rounds without it, 64 with.
 
-**Who walks this path:** the page fault and the unmap. Everything.
+**Who walks this path:** the page fault and the unmap, for anonymous
+(`mmap.c:183`) and file-backed (`:245`) alike. Everything.
 
 ## 3 — traverse
 
@@ -96,8 +106,14 @@ as though the range were covered. It need not be. The pin handler increments a
 refcount through what it is given; refcount is at 0x3c in the record, so a
 pointer of all ones writes to 0x3b -- the address of the fault.
 
-**Who walks this path:** the write handler of a memory filesystem pinning its
-dirty ranges (`klib/tmpfs.c:39`). A memfd, which is where ZGC keeps its heap.
+**Who walks this path:** `pagecache_nodelocked_traverse` has two callers, and the
+only users outside the pagecache are `klib/tmpfs.c:39`, `:98` and `:254` -- so
+this is tmpfs-only, and tmpfs is what stands behind `memfd_create`
+(`klib/shmem.c:39`). The pin is taken by the write-back, which means the five
+second timer (`pagecache.c:1697`) reaches it and not only an explicit sync.
+
+**ZGC only.** A collector with an anonymous heap has no pagecache node and never
+comes near this.
 
 ## 4 — node lock inside the page table walk
 
@@ -107,9 +123,18 @@ dirty ranges (`klib/tmpfs.c:39`). A memfd, which is where ZGC keeps its heap.
 from inside `traverse_ptes`, which runs holding the page table lock, while the
 unmap path takes the two in the opposite order.
 
-**Who walks this path:** the periodic scan of shared mappings
-(`pagecache_scan_shared_mappings`, `pagecache.c:1671`), over every shared file
-mapping in the system -- which includes a ZGC heap.
+**Who walks this path:** two halves, and they are not the same path.
+`check_dirty_page` is reached from the five second scan (`pagecache.c:1671`) and
+from `pagecache_node_scan` (`:1800`), i.e. from `msync(MS_SYNC)` (`mmap.c:1201`)
+and `fsync`; it only ever walks `MAP_SHARED` file mappings. `check_old_page` is
+reached from `pagecache_drain` (`:918`) under **memory pressure**
+(`init.c:717`), and walks private mappings too (`:951`) -- the `.so` files and
+jars a JVM maps, not just its heap.
+
+**On aarch64 the dirty half is dead code**: `pte_is_dirty()` is a stub returning
+false (`src/aarch64/page_machine.h:404`), so that body never runs and the node
+lock is never asked for there. On arm64 this patch is worth having for the
+reclaim half; on x86-64 for both.
 
 ## 5 — node lock on the early return
 
@@ -119,9 +144,13 @@ it and four with it all completed, so that was noise and is not offered as evide
 
 `pagecache_release_page` takes the node's lock, looks the page up, and returns
 from inside the lock when the lookup finds nothing. The caller is the page fault
-path (`mmap.c:264`), reached when two processors fault the same page at once and
-one of them has to give its reference back. Found by reading rather than from a
-failure.
+path (`mmap.c:264`, its only caller), reached when two processors fault the same
+page at once and one of them has to give its reference back. Found by reading
+rather than from a failure.
+
+**Who walks this path:** any file-backed mapping, shared **and** private
+(`mmap.c:294-297`) -- so every JVM, through `libjvm.so`, its jars and its
+modules, and not only a heap kept in a file.
 
 ## 6 — page that is already free
 
@@ -137,16 +166,48 @@ the runs without this series.
 
 ## 7 — sync completion
 
+The queued completion only exists when the node is busy and a caller asked for
+one (`pagecache.c:1208-1215`), which happens from `sync_node` (`:1276`) --
+`fsync`/`fdatasync` (`syscall.c:1383`) -- and from closing a file (`:1304`).
+`msync` and the write-back timer pass none.
+
+**Who walks this path:** `fsync` and `fdatasync` on a file. **Not ZGC**:
+`zPhysicalMemoryBacking_linux.cpp` contains neither `fsync` nor `msync`, so the
+heap file is never synced. In a JVM it is reached through `FileChannel.force`
+and `FileDescriptor.sync` (`libnio.so` and `libjava.so` import `fsync`).
+
+This is the weakest patch of the nine and is sent last: the observations that
+prompted it come from before patches 7 and 8 themselves, so it justifies itself
+in a circle, and no workload here reproduces it. It is not cosmetic, though --
+`assert` is not compiled out in nanos (`runtime.h:69-82`), so the path it guards
+is a halt of the guest in production.
+
 ## 8 — filesystem call under the node lock
 
 **Test:** none. `test/runtime/tmpfs_commit_race` exercises this path but passes on master too, so it is offered as a non-regression test and not as evidence.
 
-`pagecache_commit_dirty_ranges` calls `pn->fs_write` holding the node's spinlock,
-and a memory filesystem's write path takes a mutex that can sleep.
+`pagecache_commit_dirty_ranges` calls `pn->fs_write` (`pagecache.c:1061`) holding
+the node's spinlock, and the write path takes a mutex that can sleep -- in the
+memory filesystem (`klib/tmpfs.c:53`) and on the root filesystem alike
+(`tfs.c:796`), both through `filesystem_lock` (`fs.h:151`).
+
+**Who walks this path:** file I/O, with or without a mapping. Not specific to a
+heap, and not specific to tmpfs.
 
 ## 9 — the punch
 
 **Test:** `test/runtime/tmpfs_punch`. Red on master at the line that requires the block count to drop, green here.
+
+**Who walks this path:** ZGC, literally. `fallocate_punch_hole` with
+`FALLOC_FL_PUNCH_HOLE|FALLOC_FL_KEEP_SIZE`
+(`zPhysicalMemoryBacking_linux.cpp:552`) on a descriptor from `memfd_create`
+(`:211`), sized with `ftruncate` (`:137`) and mapped `MAP_FIXED|MAP_SHARED`
+(`:694`), driven by the `ZUncommitter` thread. No other collector: theirs are
+anonymous from reservation to uncommit and never call `fallocate`.
+
+Note on the image rather than the code: `memfd_create` needs the `shmem` klib
+(`klib/shmem.c:44`), and ZGC is not the default collector -- `-XX:+UseZGC` is
+required.
 
 Comes with `test/runtime/tmpfs_punch`, which punches half a file and requires the
 block count to drop; on master it fails at that line, and it is the only
